# second_brain

./: .gitignore  README.md  pyproject.toml
brain/: __init__.py  app_config.py  chunking.py  cli.py  default_config.py  errors.py  index_state.py  indexer.py  mail_fingerprint.py  rag.py  retrieval.py  types.py  vectorstore.py
brain/ingest/: __init__.py  apple_mail.py  fs.py  notes.py  pdf.py  screenshots.py
brain/tools/: __init__.py  builtin.py
tests/: conftest.py  test_apple_mail.py  test_chunking.py  test_config_errors.py  test_config_load.py  test_emlx.py  test_index_state.py  test_mail_sender_intent.py  test_tools_allowlist.py
